fix readme alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ a {
 
 /* ! Change! */
 .nav a:hover {
-	color: #CFFFB0;
+	color: rgb(255, 89, 94);
 }
 
 header {
